crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_test__test_mock_directory.snap
---
source: crates/stepflow-main/tests/commands/test_test.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - test
    - tests/mock
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Missing file: tests/mock
